added css, and readme

--- a/tournaments.html
+++ b/tournaments.html
@@ -80,7 +80,7 @@
 
         <div class="trophy-card">
             <img src="Contents/img/trophies-logos/logo-trophy-1.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 1</h4>
+            <h4 class="trophy-title">Challengers</h4>
 
             <h5>Region : Usa</h5>
             <h5>Prize Pool: <br> $200,000 USD</h5>
@@ -97,7 +97,8 @@
                 <h2>Participants</h2>
                 <div class="modal-grid">
                     <div class="modal-card">
-                        <h3>Group A</h3>
+                        <h3>Teams</h3>
+                        <h4>Group A</h4>
                         <p>100 Thieves</p>
                         <p>XSET</p>
                         <p>Ghost Gaming</p>
@@ -106,6 +107,7 @@
                     </div>
                     <div class="modal-card">
 
+                        <h3>Teams</h3>
                         <h3>Group B</h3>
                         <p>Evil Geniuses</p>
                         <p>Luminosity</p>
@@ -119,7 +121,7 @@
         </div>
         <div class="trophy-card">
             <img src="Contents/img/trophies-logos/logo-trophy-2.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 2</h4>
+            <h4 class="trophy-title">Evolution</h4>
 
             <h5>Region : EU</h5>
             <h5>Prize Pool: <br> $26,000 USD</h5>
@@ -135,6 +137,7 @@
             <div class="modal-content">
                 <h2>Participants</h2>
                 <div class="modal-card">
+                    <h3>Teams</h3>
                     <p>DYSYRE</p>
                     <p>Ovation eSports</p>
                     <p>Angry Titans</p>
@@ -150,7 +153,7 @@
 
         <div class="trophy-card">
             <img src="Contents/img/trophies-logos/logo-trophy-3.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 3</h4>
+            <h4 class="trophy-title">Birlik</h4>
             <h5>Region : Turkey</h5>
             <h5>Prize Pool: <br> $6,000 USD</h5>
             <h5> Dates:</h5>
@@ -166,6 +169,7 @@
                 <h2>Participants</h2>
 
                 <div class="modal-card">
+                    <h3>Teams</h3>
                     <p>Fire Flux Esports</p>
                     <p>SuperMassive Blaze</p>
                     <p>Futbolist</p>
@@ -185,7 +189,7 @@
 
         <div class="trophy-card">
             <img src="Contents/img/trophies-logos/logo-trophy-4.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 4</h4>
+            <h4 class="trophy-title">Rising</h4>
             <h5>Region : Spain</h5>
             <h5>Prize Pool: <br> $6,000 USD</h5>
             <h5> Dates:</h5>
@@ -201,6 +205,7 @@
                 <h2>Participants</h2>
 
                 <div class="modal-card">
+                    <h3>Teams</h3>
                     <p>Case Esports</p>
                     <p>Artic</p>
                     <p>UCAM Tokiers</p>
@@ -220,7 +225,7 @@
         <div class="trophy-card">
 
             <img src="Contents/img/trophies-logos/logo-trophy-5.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 5</h4>
+            <h4 class="trophy-title">Polaris</h4>
             <h5>Region : EU</h5>
             <h5>Prize Pool: <br> $21,000 USD</h5>
             <h5> Dates:</h5>
@@ -236,6 +241,7 @@
                 <h2>Participants</h2>
 
                 <div class="modal-card">
+                    <h3>Teams</h3>
                     <p>who cars?</p>
                     <p>EXCEl</p>
                     <p>Humam Tripwires</p>
@@ -254,7 +260,7 @@
         <div class="trophy-card">
 
             <img src="Contents/img/trophies-logos/logo-trophy-6.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 6</h4>
+            <h4 class="trophy-title">Surge</h4>
             <h5>Region : EU</h5>
             <h5>Prize Pool: <br> $21,000 USD</h5>
             <h5> Dates:</h5>
@@ -269,6 +275,7 @@
             <div class="modal-content">
                 <h2>Participants</h2>
                 <div class="modal-card">
+                    <h3>Teams</h3>
                     <p>Enterprise Esports</p>
                     <p>NOM Esports</p>
                     <p>Zero Tenacity</p>
