--- a/tournaments.html
+++ b/tournaments.html
@@ -308,11 +308,12 @@
         <a href="https://www.vlr.gg/event/1023/project-v-weekly-tournament-2">
             <div class="trophy-card">
                 <img src="Contents/img/trophies-logos/logo-trophy-7.png" class="gamingtrophy" alt="">
-                <h4 class="trophy-title">Ended Trophy 1</h4>
+                <h4 class="trophy-title">Project V</h4>
                 <h5>Region : EU</h5>
                 <h5>Prize Pool: <br> $1,000 USD</h5>
                 <h5> Dates:</h5>
                 <h6 class="past-date">May 26 - May 27 (finished)</h6>
+                <h6>Winner: 7th Sense  </h6>
                 <p>Project V: Weekly Tournament 3</p>
             </div>
         </a>
@@ -320,12 +321,39 @@
             <div class="trophy-card">
 
                 <img src="Contents/img/trophies-logos/logo-trophy-8.png" class="gamingtrophy" alt="">
-                <h4 class="trophy-title">Ended Trophy 2</h4>
+                <h4 class="trophy-title">Game Changers </h4>
                 <h5>Region : Asia</h5>
                 <h5>Prize Pool: <br> $5,000 USD</h5>
                 <h5> Dates:</h5>
                 <h6 class="past-date">Apr 30 - May 8 (finished)</h6>
+                <h6>Winner: Alter Ego Celestè </h6>
                 <p>Champions Tour Game Changers Asia Pacific: Open 3</p>
+            </div>
+        </a>
+        <a href="https://www.vlr.gg/event/1031/valorant-east-united-stage-2-monthly-cup-1">
+            <div class="trophy-card">
+
+                <img src="Contents/img/trophies-logos/logo-trophy-9.png" class="gamingtrophy whiteborder" alt="">
+                <h4 class="trophy-title">United</h4>
+                <h5>Region : EU</h5>
+                <h5>Prize Pool: <br> $1,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6 class="past-date">May 28 - May 30 (finished)</h6>
+                <h6>Winner: Divinity </h6>
+                <p>VALORANT East: United - Stage 2 - Monthly Cup #1</p>
+            </div>
+        </a>
+        <a href="https://www.vlr.gg/event/1056/valorant-open-tour-france-2022-stage-4">
+            <div class="trophy-card">
+
+                <img src="Contents/img/trophies-logos/logo-trophy-10.png" class="gamingtrophy" alt="">
+                <h4 class="trophy-title">VALORANT Open Tour</h4>
+                <h5>Region : France</h5>
+                <h5>Prize Pool: <br> $1,569 USD</h5>
+                <h5> Dates:</h5>
+                <h6 class="past-date">May 29(finished)</h6>
+                <h6>Winner: Valorians </h6>
+                <p>VALORANT Open Tour France 2022: Stage 4</p>
             </div>
         </a>
     </div>
