--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/x-icon" href="./Contents/img/favicon.ico">
 
     <!-- styles -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./Style/style.css">
     <link rel="stylesheet" href="./Style/gallery.css">
     <title>Valorant Esport</title>
 </head>
@@ -73,6 +73,9 @@
     </div>
 
     <h2 class="gallery-title">GALLERY</h2>
+    <p class="gallery-intro">
+        Checkout the best moments of the past tournaments!
+    </p>
 
     <div class="gallery">
 
