--- a/form.html
+++ b/form.html
@@ -95,56 +95,56 @@
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="mname">Middle name:</label>
-                        <input type="text" id="mname" name="mname" value="" placeholder="(Optional)"
+                        <input type="text" id="mname" name="mname" value="mname" placeholder="(Optional)"
                             pattern="^[a-zA-Z]+$" maxlenght="30">
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="lname">Last name:</label>
-                        <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname..."
+                        <input type="text" id="lname" name="lname" value="lanme" placeholder="Enter your Surname..."
                             pattern="^[a-zA-Z]+$" maxlenght="30" required>
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="btag">Battle Tag:</label>
-                        <input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag..."
+                        <input type="text" id="btag" name="btag" value="btag" placeholder="Enter your Battle Tag..."
                             maxlength="30" required>
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="tname">Team Name</label>
-                        <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..."
+                        <input type="text" id="tname" name="tname" value="tname" placeholder="Enter your Team name..."
                             maxlength="30" required>
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label for="email">Enter your email:</label>
-                        <input type="email" name="email" id="email" placeholder="Enter your email..." required>
+                        <input type="email" name="email" id="email" placeholder="Enter your email..." value="email" required>
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="phone">Phone</label>
                         <input type="tel" id="phone" name="phone" placeholder="333-333-3333"
-                            pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{4}">
+                            pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{4}" value="phone">
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="city">City</label>
                         <input type="text" name="city" id="address" placeholder="Enter your city..."
-                            pattern="^[a-zA-Z\s]+$" maxlenght="30">
+                            pattern="^[a-zA-Z\s]+$" maxlenght="30" value="city">
                     </div>
                 </div>
                 <div class="external-container-a">
                     <div class="internal-container-a">
                         <label class="form-item" for="address">Address</label>
                         <input type="text" name="address" id="address" placeholder="Enter your address..."
-                            maxlenght="50" pattern="[a-zA-Z0-9\s]+(\.)?">
+                            maxlenght="50" pattern="[a-zA-Z0-9\s]+(\.)?" value="address">
                     </div>
                 </div>
                 <div class="external-container-a">
