--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
         
 
         <div class="logo-right">
-            <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
+            <img src="./Contents/img/transparent-red-logo2.png" alt="logo-right">
         </div>
 
         <div class="hamburger">
@@ -506,19 +506,19 @@
                 <ul>
                     <li>
                         <a href="https://twitter.com/ValorantEsports" target="_blank"><img
-                                src="./Contents/img/articles img/twitter.png" alt="twitter" /></a>
+                                src="./Contents/img/articles-img/twitter.png" alt="twitter" /></a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank">
-                            <img src="./Contents/img/articles img/youtube.png" alt="youtube" /></a>
+                            <img src="./Contents/img/articles-img/youtube.png" alt="youtube" /></a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/valorantesports/" target="_blank"><img
-                                src="./Contents/img/articles img/instagram.png" alt="instagram" /></a>
+                                src="./Contents/img/articles-img/instagram.png" alt="instagram" /></a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
-                                src="./Contents/img/articles img/facebook.png" alt="facebook" /></a>
+                                src="./Contents/img/articles-img/facebook.png" alt="facebook" /></a>
                     </li>
                 </ul>
             </div>
