--- a/news.html
+++ b/news.html
@@ -57,7 +57,7 @@
         <span class="arrow arrow-down"></span>
 
         <div class="logo-right">
-            <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
+            <img src="./Contents/img/transparent-red-logo2.png" alt="" >
         </div>
 
         <div class="hamburger">
@@ -88,7 +88,7 @@
             <a name="article-one"></a>
 
             <div class="img-article">
-                <img src="./Contents/img/articles img/full-img-art1.png" alt="" srcset="">
+                <img src="./Contents/img/articles-img/full-img-art1.png" alt="" >
             </div>
 
             <div class="article-one">
@@ -171,7 +171,7 @@
             <a name="article-two"></a>
 
             <div class="img-article">
-                <img src="./Contents/img/articles img/full-img-art2.png" alt="" srcset="">
+                <img src="./Contents/img/articles-img/full-img-art2.png" alt="" >
             </div>
 
             <div class="article-two">
@@ -321,7 +321,7 @@
 
             <a name="article-three"></a>
             <div class="img-article">
-                <img src="./Contents/img/articles img/full-img-art3.png" alt="" srcset="">
+                <img src="./Contents/img/articles-img/full-img-art3.png" alt="" >
             </div>
 
             <div class="article-three">
@@ -344,7 +344,7 @@
                 <br><br>
 
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art3a.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art3a.png" alt="" >
                 </div>
                 <br><br>
                 <p>
@@ -359,13 +359,13 @@
                 <br><br>
 
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art3b.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art3b.png" alt="" >
                 </div>
 
                 <br><br>
 
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art3c.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art3c.png" alt="" >
                 </div>
 
                 <br><br>
@@ -392,13 +392,13 @@
 
                 <br><br>
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art3d.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art3d.png" alt="" >
                 </div>
 
                 <br><br>
 
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art3e.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art3e.png" alt="" >
                 </div>
                 <br><br>
 
@@ -415,7 +415,7 @@
             <a name="article-four"></a>
 
             <div class="img-article">
-                <img src="./Contents/img/articles img/full-img-art4.png" alt="" srcset="">
+                <img src="./Contents/img/articles-img/full-img-art4.png" alt="" >
             </div>
 
             <div class="article-four">
@@ -505,7 +505,7 @@
                 <br><br>
 
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art3b.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art3b.png" alt="" >
                 </div>
 
                 <br><br>
@@ -529,7 +529,7 @@
                 <br><br>
 
                 <div class="img-inside-article">
-                    <img src="./Contents/img/articles img/full-img-art4a.png" alt="" srcset="">
+                    <img src="./Contents/img/articles-img/full-img-art4a.png" alt="" >
                 </div>
 
                 <br><br>
@@ -585,19 +585,19 @@
             <ul>
                 <li>
                     <a href="https://twitter.com/ValorantEsports" target="_blank"><img
-                            src="./Contents/img/articles img/twitter.png" alt="twitter" /></a>
+                            src="./Contents/img/articles-img/twitter.png" alt="twitter" /></a>
                 </li>
                 <li>
                     <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank">
-                        <img src="./Contents/img/articles img/youtube.png" alt="youtube" /></a>
+                        <img src="./Contents/img/articles-img/youtube.png" alt="youtube" /></a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/valorantesports/" target="_blank"><img
-                            src="./Contents/img/articles img/instagram.png" alt="instagram" /></a>
+                            src="./Contents/img/articles-img/instagram.png" alt="instagram" /></a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
-                            src="./Contents/img/articles img/facebook.png" alt="facebook" /></a>
+                            src="./Contents/img/articles-img/facebook.png" alt="facebook" /></a>
                 </li>
             </ul>
         </div>
