--- a/players.html
+++ b/players.html
@@ -64,7 +64,7 @@
       <span class="arrow arrow-down"></span>
 
       <div class="logo-right">
-        <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="" />
+        <img src="./Contents/img/transparent-red-logo2.png" alt="" />
       </div>
 
       <div class="hamburger">
@@ -106,14 +106,14 @@
           />
           <h2>Player profile</h2>
           <img
-            src=""
+            src="#"
             alt="selected player profile image"
             id="player-info-pfp"
           />
           <p>Name: <span id="player-info-name"></span></p>
           <div class="player-info-inline">
             <p>Tag: <span id="player-info-code"></span></p>
-            <img src="" alt="player nationality" id="player-info-nationality" />
+            <img src="#" alt="player nationality" id="player-info-nationality" />
           </div>
           <p id="bio-label">Bio:</p>
           <p id="player-info-bio"></p>
@@ -142,14 +142,14 @@
       </section>
       <!--ACTIVE TEAMS-->
       <div class="category-subtitle">
-        <h2 id="active" name="active">ACTIVE TEAMS</h2>
+        <h2 id="active">ACTIVE TEAMS</h2>
       </div>
       <section class="active-players">
         <ul class="teams"></ul>
       </section>
       <!--RETIRED TEAMS-->
       <div class="category-subtitle">
-        <h2 id="retired" name="retired">RETIRED TEAMS</h2>
+        <h2 id="retired">RETIRED TEAMS</h2>
       </div>
       <section class="retired-players">
         <ul class="teams"></ul>
@@ -163,19 +163,19 @@
         <ul>
           <li>
             <a href="https://twitter.com/ValorantEsports" target="_blank"><img
-                src="./Contents/img/articles img/twitter.png" alt="twitter" /></a>
+                src="./Contents/img/articles-img/twitter.png" alt="twitter" /></a>
           </li>
           <li>
             <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank">
-              <img src="./Contents/img/articles img/youtube.png" alt="youtube" /></a>
+              <img src="./Contents/img/articles-img/youtube.png" alt="youtube" /></a>
           </li>
           <li>
             <a href="https://www.instagram.com/valorantesports/" target="_blank"><img
-                src="./Contents/img/articles img/instagram.png" alt="instagram" /></a>
+                src="./Contents/img/articles-img/instagram.png" alt="instagram" /></a>
           </li>
           <li>
             <a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
-                src="./Contents/img/articles img/facebook.png" alt="facebook" /></a>
+                src="./Contents/img/articles-img/facebook.png" alt="facebook" /></a>
           </li>
         </ul>
       </div>
@@ -220,6 +220,7 @@
           </div>
         </div>
         <div class="copy">&copy; LevelUp</div>
+      </div>
       </div>
     </footer>
   
