--- a/tournaments.html
+++ b/tournaments.html
@@ -46,7 +46,7 @@
         <span class="arrow arrow-down"></span>
 
         <div class="logo-right">
-            <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="" />
+            <img src="./Contents/img/transparent-red-logo2.png" alt="" />
         </div>
 
         <div class="hamburger">
@@ -55,10 +55,6 @@
             <span></span>
         </div>
     </div>
-
-
-    </div>
-
 
     <!--This area should include a list of tournaments (at least 10). They should be grouped in
     three sections: past, current and future. Each should include at least a name, code,
@@ -382,19 +378,19 @@
                 <ul>
                     <li>
                         <a href="https://twitter.com/ValorantEsports" target="_blank"><img
-                                src="./Contents/img/articles img/twitter.png" alt="twitter" /></a>
+                                src="./Contents/img/articles-img/twitter.png" alt="twitter" /></a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank">
-                            <img src="./Contents/img/articles img/youtube.png" alt="youtube" /></a>
+                            <img src="./Contents/img/articles-img/youtube.png" alt="youtube" /></a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/valorantesports/" target="_blank"><img
-                                src="./Contents/img/articles img/instagram.png" alt="instagram" /></a>
+                                src="./Contents/img/articles-img/instagram.png" alt="instagram" /></a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
-                                src="./Contents/img/articles img/facebook.png" alt="facebook" /></a>
+                                src="./Contents/img/articles-img/facebook.png" alt="facebook" /></a>
                     </li>
                 </ul>
             </div>
