--- a/gallery.html
+++ b/gallery.html
@@ -41,9 +41,11 @@
 <body>
 
     <!-- HEADER -->
-
-    <div class="header">
-        <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
+        <div class="header"><div class="logo-left">
+            <a href="./index.html">
+                <img src="./Contents/img/logo-red-white.png" alt="logo-left" />
+            </a>
+        </div>
         <ul class="menu">
             <li><a href="./index.html">HOMEPAGE</a></li>
             <li><a href="./tournaments.html">TOURNAMENTS</a></li>
