added logo anchor to all pages

--- a/players.html
+++ b/players.html
@@ -50,7 +50,9 @@
 
     <div class="header">
       <div class="logo-left">
-        <img src="./Contents/img/logo-red-white.png" alt="logo-left" />
+        <a href="./index.html">
+          <img src="./Contents/img/logo-red-white.png" alt="logo-left" />
+        </a>
       </div>
       <ul class="menu">
         <li><a href="./index.html">HOMEPAGE</a></li>
