--- a/form.html
+++ b/form.html
@@ -42,7 +42,11 @@
     <!-- HEADER -->
 
     <div class="header">
-        <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
+        <div class="logo-left">
+            <a href="./index.html">
+              <img src="./Contents/img/logo-red-white.png" alt="logo-left" />
+            </a>
+          </div>
         <ul class="menu">
             <li><a href="./index.html">HOMEPAGE</a></li>
             <li><a href="./tournaments.html">TOURNAMENTS</a></li>
