final commit and release version

--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
             </a>
         </div>
         <ul class="menu">
-            <li><a href="./index.html">HOMEPAGE</a></li>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="./tournaments.html">TOURNAMENTS</a></li>
             <li><a href="./players.html">TEAMS</a></li>
             <li><a href="./news.html">NEWS</a></li>
