Fix of player page pictures

--- a/players.html
+++ b/players.html
@@ -55,7 +55,7 @@
         </a>
       </div>
       <ul class="menu">
-        <li><a href="./index.html">HOMEPAGE</a></li>
+        <li><a href="./index.html">HOME</a></li>
         <li><a href="./tournaments.html">TOURNAMENTS</a></li>
         <li><a href="./players.html">TEAMS</a></li>
         <li><a href="./news.html">NEWS</a></li>
@@ -102,7 +102,7 @@
         <div id="empty-div"></div>
         <div id="selected-player">
           <img
-            src="https://www.iconsdb.com/icons/preview/white/x-mark-xxl.png"
+            src="./Contents/img/players-img/x-icon.webp"
             alt=""
             class="close-profile"
           />
